--- a/01_lecture_source/gymga-homework/src/main/resources/templates/main.html
+++ b/01_lecture_source/gymga-homework/src/main/resources/templates/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Welcome to GymGa</title>
     <link rel="stylesheet" href="/static/styles/headerStyle.css">
+    <link rel="stylesheet" href="/static/styles/footerStyle.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap">
 </head>
 <body>
@@ -12,6 +13,12 @@
         <p class="logo1">Gym</p>
         <p class="logo2">家</p>
         <p class="welcome">환영합니다, 윤수빈 대표님!</p>
+    </div>
+    <!-- Footer -->
+    <div class="footer">
+        <p class="about">About</p>
+        <p class="email">Email</p>
+        <p class="tel">Tel.</p>
     </div>
 </body>
 </html>
