--- a/01_lecture_source/gymga-homework/src/main/resources/templates/main.html
+++ b/01_lecture_source/gymga-homework/src/main/resources/templates/main.html
@@ -25,6 +25,7 @@
             <h1>Login</h1>
             <a href="auth/login">로그인</a>
             <a href="admin/signup">회원가입</a>
+            <a href="auth/find">아이디/비밀번호 찾기</a>
             <form th:action="@{/auth/logout}" th:method="post">
                 <button>로그아웃</button>
             </form>
