--- a/01_lecture_source/loginpractice/src/main/resources/templates/login/auth/fail.html
+++ b/01_lecture_source/loginpractice/src/main/resources/templates/login/auth/fail.html
@@ -8,7 +8,7 @@
 <script>
     alert(`[[${ message }]]`);
 
-    window.location.replace("/login");
+    window.location.replace("/login/auth/login");
 </script>
 </body>
 </html>
