--- a/01_lecture_source/loginpractice/src/main/resources/templates/login.html
+++ b/01_lecture_source/loginpractice/src/main/resources/templates/login.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+<h1>Spring Security Login</h1>
 
-    <h1>Log In</h1>
-    <form th:action="@{/login}" th:method="post">
-        ID <input type="text" name="userId">
-        Password <input type="password" name="userPwd">
-        <button>Sign In</button>
+<div sec:authorize="hasAnyAuthority('ADMIN')">
+    <h1>=== 관리자 페이지 ===</h1>
+</div>
+<div sec:authorize="hasAnyAuthority('USER')">
+    <h1>=== 회원 페이지 ===</h1>
+</div>
+
+<div>
+    <h1>Login</h1>
+    <a href="login/auth/login">로그인</a>
+    <a href="login/auth/regist">회원가입</a>
+    <form th:action="@{/auth/logout}" th:method="post">
+        <button>로그아웃</button>
     </form>
-    <a href="/login/auth/regist">회원가입</a>
+</div>
 
-
-
-
+<hr>
+<a href="admin/page">관리자 페이지</a>
+<br>
+<a href="user/page">사용자 페이지</a>
 </body>
 </html>
