--- a/01_lecture_source/loginpractice/src/main/resources/templates/login/auth/regist.html
+++ b/01_lecture_source/loginpractice/src/main/resources/templates/login/auth/regist.html
@@ -3,21 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script>
+        const message = `[[${ message }]]`;
+        if(message) {
+            alert(message);
+        }
+    </script>
 </head>
 <body>
-    <form th:action="@{/auth/regist}" th:method="post" id="registForm">
-        <label th:for="userId" class="form-label">ID</label>
-        <input type="text" name="userId" required><br>
-        <label th:for="userPwd" class="form-label">Password</label>
-        <input type="password" name="userPwd" required><br>
-        <label th:for="userName" class="form-label">이름</label>
-        <input type="text" name="userName" required><br>
-        <label th:for="role" class="form-label">권한</label>
-        <select name="role" required>
-            <option value="대표">대표</option>
-            <option value="직원">직원</option>
-        </select><br>
-        <button type="submit">회원가입</button>
-    </form>
+<h1>회원가입</h1>
+<form th:action="@{/login/auth/regist}" method="post">
+    ID : <input type="text" name="userId"><br>
+    PWD :<input type="password" name="userPwd"><br>
+    이름 : <input type="text" name="userName"><br>
+    전화번호 : <input type="text" name="userPhone"><br>
+    권한 :
+    <select name="role">
+        <option value="대표">대표</option>
+        <option value="직원">직원</option>
+    </select><br>
+    <button>회원가입</button>
+</form>
 </body>
 </html>
